--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 
 .nav {
     background-color: var(--pink);
-    background-image: url("./assets/img/pink_clothes.avif");
+    background-image: url("assets/img/pink_clothes.avif");
     background-size: contain;
     border-image-source: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(34, 34, 34, 0.6));
     border-image-slice: fill 1;
